# HRI-project

./: .env.example  main.py  pyproject.toml  study.txt  system_instruction.txt  system_instruction_assistant.txt  system_instruction_manager.txt
