[project]
name = "hri-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.74.0",
    "misty-sdk",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[tool.uv.sources]
misty-sdk = { git = "https://github.com/MistyCommunity/Python-SDK.git" }
